--- a/README
+++ b/README
@@ -1,3 +1,20 @@
+Extension of xv6 with: 
+    new device files:
+        - /dev/null - mostly used for output redirection
+        - /dev/zero - used for creating empty files
+        - /dev/kmesg - used as storage for all kernel messages
+        - /dev/random - used for (pseudo) random number generation
+        - /dev/disk - abstraction over hard drive, allows user to work with hdd directly, bypassing file system
+    new system calls:
+        - lseek() - allows user to manually select file offset
+        - clrscrn() - clears screen
+        - getcp() - returns current cursor position
+        - setcp() - sets cursor position
+    new programm:
+        - dd - used for disk manipulation, it copies input file content into output file
+
+
+
 xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
 Version 6 (v6).  xv6 loosely follows the structure and style of v6,
 but is implemented for a modern x86-based multiprocessor using ANSI C.
